# scraping_societe

scraping_societe/: README.md  pyproject.toml
scraping_societe/data/: 20240106_20:41_SCRAPING_SOCIETE.xlsx  20240106_20:50_SCRAPING_SOCIETE.xlsx
scraping_societe/notebooks/: lets_scrap.html  lets_scrap.ipynb
scraping_societe/sandbox/: Scraping_societe.com.ipynb  lets_scrap_v2.ipynb  scraping_societe.ipynb
scraping_societe/src/: constants.py  paths.py  utils.py
