[tool.poetry]
name = "scraping-societe"
version = "0.1.0"
description = ""
authors = ["Quentin Liance <quentin.liance@polynom.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
ipykernel = "^6.28.0"
beautifulsoup4 = "^4.12.2"
lxml = "^5.0.0"
html5lib = "^1.1"
requests = "^2.31.0"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
notebook = "^7.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
